// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Status renders a component 1`] = `
<StatusSFC
  className="sc-bxivhb jGwona"
  onClick={[MockFunction]}
  theme={[ThemeObject]}
>
  Some text
</StatusSFC>
`;

exports[`Status renders a component 2`] = `
<styled.p
  className="sc-bxivhb jGwona"
  onClick={[MockFunction]}
>
  Some text
</styled.p>
`;
